--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   flex-direction: row;
   width: 100%;
   height: 100vh;
+  margin: 0;
+  padding: 0;
   max-width: 1200px; /* Puedes ajustar este valor según tus necesidades */
 }
 
