--- a/src/Componentes/Workshops/workshops.css
+++ b/src/Componentes/Workshops/workshops.css
@@ -13,11 +13,12 @@
     }
   }
   @media (max-width:409px){
-    .container-workshop{
-        width: 409px;
-        margin: auto;
-        margin-top: 260px;
-        margin-left: -600px;
+    .container-workshops{
+        position: relative !important;
+        left: 0px !important;
+        margin-left: 30px !important;
+        top: 10px !important;
+        height: 100px !important;
     }
     .container-workshop div{
         max-width: 300px;
