--- a/src/Componentes/Statement/statement.css
+++ b/src/Componentes/Statement/statement.css
@@ -1,12 +1,17 @@
 @media (max-width:600px){
     .container-statement{
-        margin: auto !important;
-        margin-top: -50px !important;
+        position: relative !important;
+        top: 0px !important;
+        left: 0px !important;
         width: 100% !important;
-        display: flex !important;
-        justify-content: center;
+        margin-top: -50px !important;
+    }
+    .div-statement{
+        width: 100% !important;
+        margin-top: 0px !important; 
     }
     p{
+        margin-top: 0px;
         font-size: 15px !important;
         width: 100% !important;
         padding: 8px;
