--- a/src/Componentes/Nav/nav.css
+++ b/src/Componentes/Nav/nav.css
@@ -1,95 +1,84 @@
+/* nav.css */
 .nav-link {
-    font-size: 20px;
-    color: black;
+  font-size: 20px;
+  color: black;
+  cursor: pointer; /* Añadir cursor pointer para los enlaces */
 }
-.container-fluid {
-    margin-left: 20px;
-  }
-  .navbar {
-    width: auto !important;
-  }
-  img {
-    margin-right: 0 !important;
-  }
-  .navbar-nav {
-    padding-left: 0 !important;
-    margin-left: 0 !important;
-  }
-  .submenu {
-    position: absolute;
-    top: 106px;
-    left: 180px; /* Ajusta la posición a la izquierda */
-    display: none;
-    z-index: 1;
-  }
-  
-  .navbar-nav .nav-item .submenu {
-    display: block; /* Muestra el submenu cuando se hace clic */
-  }
-  
-  .submenu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .submenu ul li {
-    margin-left: 0;
-    padding: 10px;
-    position: relative; /* Agregamos posición relativa para poder posicionar el redondel */
-  }
-  .submenu ul li::before {
-    content: '';
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    background-color: black; /* Color blanco */
-    border-radius: 50%; /* Para hacerlo redondo */
-    position: absolute;
-    left: -20px; /* Ajusta la posición del redondel */
-    top: 50%; /* Lo centra verticalmente */
-    transform: translateY(-50%); /* Ajusta verticalmente */
-  }
-  .submenuWorkshops {
-    position: absolute;
-    top: 58px;
-    left: 180px; /* Ajusta la posición a la izquierda */
-    display: none;
-    z-index: 1;
-  }
-  
-  .navbar-nav .nav-item .submenuWorkshops {
-    display: block; /* Muestra el submenu cuando se hace clic */
-  }
-  
-  .submenuWorkshops ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .submenuWorkshops ul li {
-    margin-left: 0;
-    padding: 10px;
-    position: relative; /* Agregamos posición relativa para poder posicionar el redondel */
-  }
-  .submenuWorkshops ul li::before {
-    content: '';
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    background-color: black; /* Color blanco */
-    border-radius: 50%; /* Para hacerlo redondo */
-    position: absolute;
-    left: -20px; /* Ajusta la posición del redondel */
-    top: 50%; /* Lo centra verticalmente */
-    transform: translateY(-50%); /* Ajusta verticalmente */
-  }
 
-  
-  @media (max-width:600px){
-  .navbar-toggler{
+.container-fluid {
+  margin-left: 20px;
+}
+
+.navbar {
+  width: auto !important;
+}
+
+img {
+  margin-right: 0 !important;
+}
+
+.navbar-nav {
+  padding-left: 0 !important;
+  margin-left: 0 !important;
+}
+
+.submenu {
+  position: absolute;
+  top: 106px;
+  left: 180px;
+  display: none;
+  z-index: 1;
+}
+
+.navbar-nav .nav-item .submenu {
+  display: block;
+}
+
+.submenu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.submenu ul li {
+  margin-left: 0;
+  padding: 10px;
+  position: relative;
+}
+
+.submenu ul li::before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background-color: black;
+  border-radius: 50%;
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.submenu ul li a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer; /* Añadir cursor pointer para los enlaces en el submenu */
+}
+
+@media (max-width: 600px) {
+  .navbar-toggler {
     margin-top: -150px !important;
   }
-  
+
+  .navbar-collapse {
+    display: none;
   }
+
+  .navbar-collapse.show {
+    display: block;
+  }
+
+  .submenu {
+    display: block;
+  }
+}
